--- a/restaurant_billing_system/index.html
+++ b/restaurant_billing_system/index.html
@@ -12,14 +12,17 @@
         <div class="input-group">
             <label for="billAmount">Total Bill Amount ($)</label>
             <input type="number" id="billAmount" placeholder="Enter total bill amount">
+            <span id="billAmountError" class="error-message"></span>
         </div>
         <div class="input-group">
             <label for="tipPercentage">Tip Percentage (%)</label>
             <input type="number" id="tipPercentage" placeholder="Enter tip percentage">
+            <span id="tipPercentageError" class="error-message"></span>
         </div>
         <div class="input-group">
             <label for="numPeople">Number of People</label>
             <input type="number" id="numPeople" placeholder="Enter number of people">
+            <span id="numPeopleError" class="error-message"></span>
         </div>
         <button class="btn" onclick="generateReceipt()">Calculate</button>
 
