--- a/Table and Form Design/index.html
+++ b/Table and Form Design/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Table and Form Design</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
-        <h2>Student Information</h2>
-        
-        <table>
+        <table id="dataTable">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -20,48 +21,37 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>John Doe</td>
-                    <td>21</td>
+                    <td>Alex Johnson</td>
+                    <td>24</td>
                     <td>HTML</td>
                 </tr>
                 <tr>
-                    <td>Jane Smith</td>
-                    <td>22</td>
+                    <td>Maria Garcia</td>
+                    <td>29</td>
                     <td>CSS</td>
                 </tr>
                 <tr>
-                    <td>Michael Brown</td>
-                    <td>23</td>
+                    <td>David Smith</td>
+                    <td>22</td>
                     <td>JavaScript</td>
                 </tr>
             </tbody>
         </table>
-
-        <h3>Enroll in a Course</h3>
-        <form id="enrollmentForm">
-            <div class="form-group">
-                <label for="fullName">Full Name:</label>
-                <input type="text" id="fullName" placeholder="Enter your full name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Enter your email" required>
-            </div>
-            <div class="form-group">
-                <label for="course">Select Course:</label>
-                <select id="course" required>
-                    <option value="">Select a course</option>
-                    <option value="HTML">HTML</option>
-                    <option value="CSS">CSS</option>
-                    <option value="JavaScript">JavaScript</option>
-                </select>
-            </div>
-            <button type="submit" class="submit-btn">Submit</button>
+        <form id="dataForm">
+            <label for="fullName">Full Name</label>
+            <input type="text" id="fullName" name="fullName" placeholder="Enter your full name" required>
+            <label for="age">Age</label>
+            <input type="text" id="age" name="age" placeholder="Enter your age" required>
+            <label for="course">Select Course</label>
+            <select id="course" name="course">
+                <option value="HTML">HTML</option>
+                <option value="CSS">CSS</option>
+                <option value="JavaScript">JavaScript</option>
+            </select>
+            <input type="submit" value="Submit">
         </form>
-
-        <p id="successMessage" style="display:none;">Form Submitted Successfully!</p>
     </div>
-    
     <script src="script.js"></script>
 </body>
+
 </html>
